<resources>
    <string name="app_name">MediaPlayer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="long_song_desc">Single-line text view that scrolls automatically if the text is too long to fit in the widget</string>
    <string name="song_title">Song Title</string>
    <string name="song_photo">Song Photo</string>
    <string name="song_image">Song Image</string>
    <string name="description">Description</string>
</resources>
