<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_song"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/song_image"
        app:srcCompat="@drawable/musics_icon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="5dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/list_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:text="Default" />

        <TextView
            android:id="@+id/list_song_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@android:color/background_light"
            tools:text="Default Desc" />
    </LinearLayout>
</LinearLayout>