<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="chhatrachhorm.onenterprise.iout.mediaplayer.MainFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/menu_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/frag_main_song_photo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/song_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/musics"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/frag_main_song_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/long_song_desc"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/menu_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/frag_main_share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/teal4"
                android:contentDescription="@string/previous"
                android:src="@android:drawable/ic_menu_share" />
            <ImageButton
                android:id="@+id/frag_main_prev"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/teal4"
                android:contentDescription="@string/previous"
                android:src="@android:drawable/ic_media_previous" />

            <!--<ImageButton-->
                <!--android:id="@+id/frag_main_pause"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/teal4"-->
                <!--android:contentDescription="@string/pause"-->
                <!--android:src="@android:drawable/ic_media_pause" />-->

            <ImageButton
                android:id="@+id/frag_main_play_pause"
                android:background="@color/teal4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/play"
                android:src="@android:drawable/ic_media_play" />

            <!--<ImageButton-->
                <!--android:id="@+id/frag_main_stop"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:background="@color/teal4"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@string/stop"-->
                <!--android:src="@android:drawable/ic_delete" />-->

            <ImageButton
                android:id="@+id/frag_main_next"
                android:background="@color/teal4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/next"
                android:src="@android:drawable/ic_media_next" />

            <ImageButton
                android:id="@+id/frag_main_menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/teal4"
                android:contentDescription="@string/next"
                android:src="@android:drawable/ic_menu_set_as" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
